
syntax = "proto3";



package Tickets;

// The greeting service definition.
service Tickets {
  // Sends a greeting
  rpc NewTicket(TicketRequest) returns (TicketReply) {}
  rpc GetTickets(TicketRequest) returns (TicketReply) {}
}

// The request message containing the user's name.
message TicketRequest {
  string email = 1;
  int64 socialid = 2;
  int64 referrer = 3;
}

// The response message containing the greetings
message TicketReply {
  	string ticketid = 1;

  	message Ticket {
        string TicketID = 1;
        string Email = 2;
        int64 SocialID = 3;
        int64 Referrer = 4;
        bool Bonus = 5;
    } 
 
    repeated Ticket Tickets = 2;
}
